tests/fixtures/syntax_rules/neg/index.ts
/** Facade-only index.ts — does NOT trigger TS-AGENT-PROJECT-003. */
export { doSomething } from "./module.js";
export { VERSION } from "./config.js";
